--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div id="app">Hello, world!</div>
+    <div id="app"></div>
   </body>
 </html>
